Переместил запросы в background
1. Убрал запросы из главного потока в бэкграунд
2. Добавил scrollView на DetailVC

--- a/Movies/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Movies/Base.lproj/Main.storyboard
@@ -56,43 +56,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="NJL-J3-9Up">
-                                <rect key="frame" x="20" y="108" width="374" height="788"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XPM-e6-Z8W">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
-                                        <rect key="frame" x="158.5" y="0.0" width="57" height="29"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                        <color key="textColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bg-PK-id3">
-                                        <rect key="frame" x="67" y="54" width="240" height="400"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="NJL-J3-9Up">
+                                        <rect key="frame" x="20" y="20" width="374" height="856"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z5j-uW-fjf">
+                                                <rect key="frame" x="158.5" y="0.0" width="57" height="29"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                <color key="textColor" red="0.93717288970000001" green="0.93730795379999998" blue="0.96066993469999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4bg-PK-id3">
+                                                <rect key="frame" x="67" y="54" width="240" height="400"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="400" id="D15-7G-dwu"/>
+                                                </constraints>
+                                            </imageView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" pagingEnabled="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
+                                                <rect key="frame" x="0.0" y="479" width="374" height="377"/>
+                                                <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="400" id="D15-7G-dwu"/>
+                                            <constraint firstItem="4bg-PK-id3" firstAttribute="leading" secondItem="NJL-J3-9Up" secondAttribute="leading" constant="67" id="UAs-Pd-bfo"/>
+                                            <constraint firstItem="Zxw-dc-idp" firstAttribute="leading" secondItem="NJL-J3-9Up" secondAttribute="leadingMargin" id="gEg-hS-XgI"/>
                                         </constraints>
-                                    </imageView>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" pagingEnabled="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Zxw-dc-idp">
-                                        <rect key="frame" x="0.0" y="479" width="374" height="309"/>
-                                        <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
+                                    </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="4bg-PK-id3" firstAttribute="leading" secondItem="NJL-J3-9Up" secondAttribute="leading" constant="67" id="UAs-Pd-bfo"/>
-                                    <constraint firstItem="Zxw-dc-idp" firstAttribute="leading" secondItem="NJL-J3-9Up" secondAttribute="leadingMargin" id="gEg-hS-XgI"/>
+                                    <constraint firstItem="NJL-J3-9Up" firstAttribute="top" secondItem="XPM-e6-Z8W" secondAttribute="top" constant="20" id="EnW-Yb-ngu"/>
+                                    <constraint firstItem="NJL-J3-9Up" firstAttribute="leading" secondItem="XPM-e6-Z8W" secondAttribute="leading" constant="20" id="HL3-21-nUa"/>
+                                    <constraint firstItem="NJL-J3-9Up" firstAttribute="centerY" secondItem="XPM-e6-Z8W" secondAttribute="centerY" id="Xqr-kO-eF7"/>
+                                    <constraint firstAttribute="bottom" secondItem="NJL-J3-9Up" secondAttribute="bottom" constant="20" id="ktK-4V-5fe"/>
+                                    <constraint firstItem="NJL-J3-9Up" firstAttribute="centerX" secondItem="XPM-e6-Z8W" secondAttribute="centerX" id="vr8-8h-tdc"/>
+                                    <constraint firstAttribute="trailing" secondItem="NJL-J3-9Up" secondAttribute="trailing" constant="20" id="zQ5-Fb-0NL"/>
                                 </constraints>
-                            </stackView>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7ke-ao-TGC"/>
                         <color key="backgroundColor" red="0.031361360099999999" green="0.050991125399999997" blue="0.1686013341" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="NJL-J3-9Up" firstAttribute="leading" secondItem="7ke-ao-TGC" secondAttribute="leading" constant="20" id="6l1-w8-Pcu"/>
-                            <constraint firstItem="7ke-ao-TGC" firstAttribute="trailing" secondItem="NJL-J3-9Up" secondAttribute="trailing" constant="20" id="ald-iO-hL6"/>
-                            <constraint firstItem="NJL-J3-9Up" firstAttribute="top" secondItem="7ke-ao-TGC" secondAttribute="top" constant="20" id="sfd-1d-VF5"/>
-                            <constraint firstItem="7ke-ao-TGC" firstAttribute="bottom" secondItem="NJL-J3-9Up" secondAttribute="bottom" constant="-83" id="txu-rU-Jv9"/>
+                            <constraint firstItem="XPM-e6-Z8W" firstAttribute="top" secondItem="iZ7-8X-NAk" secondAttribute="top" id="8x1-gx-bEe"/>
+                            <constraint firstItem="XPM-e6-Z8W" firstAttribute="leading" secondItem="7ke-ao-TGC" secondAttribute="leading" id="NJT-cD-9bN"/>
+                            <constraint firstItem="XPM-e6-Z8W" firstAttribute="trailing" secondItem="7ke-ao-TGC" secondAttribute="trailing" id="R8h-bc-rdN"/>
+                            <constraint firstAttribute="bottom" secondItem="XPM-e6-Z8W" secondAttribute="bottom" id="ajn-gB-4th"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Description" id="OP4-H3-P8c">
